fix: fix swagger descriptions
